# gruporom

./: .env.example  .gitignore  CLAUDE.md  DESIGN-SYSTEM.md  README.md  calf.txt  debug_s3.py  empresas.json  fabfile.py  gruporom.sublime-project  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  simular_webhook.py  tailwind.config.js  test.sh  test_s3_permissions.py  test_send_message.py  test_webhook.py  test_websocket_connection.py  test_whatsapp_flow.py
config/: asgi.py  settings.py  urls.py
core/: choices.py  consumers.py  context_processors.py  decorators.py  fields.py  form_fields.py  logging_config.py  middleware.py  routing.py  test_settings.py  widgets.py
core/assets/: app.js  autocomplete.js  cep.js  masks.js  multiple-autocomplete.js  style.scss  tailwind.css  tom-select-custom.scss  tom-select-init.js
core/data/: paises.json
core/factories/: __init__.py  aeroporto.py  bloqueio.py  cambio.py  caravana.py  cargo.py  cia_area.py  cidade.py  colaborador.py  contato.py  dia_roteiro.py  extra.py  fornecedor.py  funcao.py  hotel.py  incluso.py  nota.py  pais.py  passageiro.py  pessoa.py  tarefa.py  turno.py  usuario.py  voo.py  whatsapp.py
core/forms/: __init__.py  alterar_senha.py  caravana.py  caravana_promotor.py  cargo.py  colaborador.py  contato.py  fornecedor.py  pessoa.py  turno.py  usuario.py  venda_forms.py  whatsapp.py
core/managers/: __init__.py  usuario.py  (+1 more)
debug/: debug_signed_url.py  debug_template_render.py  simular_webhook.py
docs/: S3_SETUP.md  campos-multiselect.md
json/: aeroportos.json
(+345 files in other folders)
